# todo_ai

./: .gitignore  README.md  pyproject.toml
core/: .dockerignore  .gitignore  pyproject.toml
core/conftest/: conftest.py
core/core/todos/: create_todo.py
core/docs/source/: conf.py  project_template.rst
core/tests/test_todos/: test_create_todo.py
core/tools/: format.sh
docs/: pull_request_template.md
docs/source/: conf.py  index.rst  project_template.rst
project_template/: .dockerignore  pyproject.toml
project_template/project_template/: magic.py
project_template/tools/: format.sh
