[tool.poetry]
name = "todo-ai"
version = "0.1.0"
description = ""
authors = ["Marcin Włodarczyk <gonzur75@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
freezegun = "1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
include = ["pyproject.toml", "project_template/**/*.py"]
line-length = 120

[tool.ruff.format]
exclude = ["docs"]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true
docstring-code-line-length = 50

[tool.mypy]
exclude = ["docs"]